tests/compile/fail/invalid-item.stderr
error: Only TupleStruct with a single `u32`, `u64` or `u128` is supported, i.e. `struct Id(u128);`
  --> $DIR/invalid-item.rs:15:1
   |
15 | enum Id {}
   | ^^^^
